--- a/dashboard/views/includes/head.ejs
+++ b/dashboard/views/includes/head.ejs
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Atlanta | Dashboard</title>
+    <title>NewBot | Dashboard</title>
     <link rel="icon" type="image/ico" href="/dist/img/atlanta.ico" />
 
     <!-- CSS JS Fonts Icons-->
